feat: add unit test workflow for bash scripts
- Introduced a GitHub Actions workflow for running unit tests on bash scripts.
- Created `unit-tests.yml` to automate the discovery and execution of test scripts.
- Added test scripts to validate core functionality of the action.

docs: update maintaining and README documentation

- Updated `MAINTAINING.md` to include new testing procedures and alternative configuration details.
- Revised `README.md` to clarify input descriptions and debugging instructions.
- Added sections on unit testing and CI workflows.

chore: refactor image configuration scripts

- Created `image-config-alternative.sh` for alternative image configurations.
- Updated `image-config.sh` to use a new repository and versioning scheme.
- Added a template for generating image configuration files dynamically.

feat: implement retagging script for Docker images

- Added `retag-images.sh` to automate re-tagging of Docker images for testing.
- Implemented logic to fetch existing tags and push new versions.

fix: improve error handling and logging in scripts

- Enhanced logging functions to output messages to stderr.
- Added checks for required dependencies in various scripts.
- Improved the main execution flow in `run-md2conf.sh` to handle alternative configurations.

test: add unit tests for image configuration logic

- Created `test-image-config.sh` to validate the behavior of the `determine_image()` function.
- Implemented various test cases to cover different input scenarios and expected outcomes.

--- a/action.yml
+++ b/action.yml
@@ -13,9 +13,8 @@ inputs:
   image_repository:
     description: 'The Docker image repository to use.'
     required: false
-    default: 'leventehunyadi/md2conf'
   image_tag:
-    description: 'The tag of the Docker image to use (e.g., v1, v1.2.3). Defaults to the action''s own version.'
+    description: 'The tag of the Docker image to use (e.g., 1, 1.2.3). Defaults to the action''s own version.'
     required: false
 
   # Confluence Connection Settings
@@ -89,6 +88,10 @@ inputs:
     description: 'Enable debug logging for troubleshooting (true/false).'
     required: false
     default: 'false'
+  alternative_config_enabled:
+    description: 'If true, use image-config-alternative.sh instead of image-config.sh.'
+    required: false
+    default: 'false'
 
 runs:
   using: "composite"
@@ -99,6 +102,7 @@ runs:
         INPUT_PATH: ${{ inputs.path }}
         INPUT_IMAGE_REPOSITORY: ${{ inputs.image_repository }}
         INPUT_IMAGE_TAG: ${{ inputs.image_tag }}
+        INPUT_ALTERNATIVE_CONFIG_ENABLED: ${{ inputs.alternative_config_enabled }}
         INPUT_DOMAIN: ${{ inputs.domain }}
         INPUT_API_URL: ${{ inputs.api_url }}
         INPUT_USERNAME: ${{ inputs.username }}
