--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -45,7 +45,7 @@ jobs:
           api_key: ${{ secrets.CONFLUENCE_API_KEY }}
           space: ${{ vars.CONFLUENCE_SPACE_KEY }}
           root_page_id: ${{ vars.CONFLUENCE_ROOT_PAGE_ID }}
-          title_prefix: 'Action Test - '
+          # title_prefix: 'Action Test - '
           keep_hierarchy: true
           render_mermaid: true
           render_plantuml: true
